--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ html, body {
   background-color: #200F08;
 background-image: url('bg.jpg');
 background-position:top left;
-
 background-repeat: no-repeat;
 }
 
@@ -132,7 +131,9 @@ padding:0 10px;
   position: fixed;
   right: 11%;
   top: 50%;
-  background-image: url('./logo.png');
+  background-image: url('logo.png');
+  background-position:center;
+background-repeat: no-repeat;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   border-radius: 50%;
   -webkit-animation: at-ripple 0.6s linear infinite;
