--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ padding:0 10px;
   position: fixed;
   right: 11%;
   top: 50%;
-  background-image: url('logo.png');
+  background-image: url('logo.PNG');
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   border-radius: 50%;
   -webkit-animation: at-ripple 0.6s linear infinite;
