--- a/style.css
+++ b/style.css
@@ -131,14 +131,24 @@ padding:0 10px;
   position: fixed;
   right: 11%;
   top: 50%;
-  background-image: url('logo.JPG');
+  background-image: url('logo.png');
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   border-radius: 50%;
   -webkit-animation: at-ripple 0.6s linear infinite;
   animation: at-ripple 0.6s linear infinite;
 }
+@media (max-width: 1085px) {.logo{  right:5%;top: 10%;}}
+@media (max-width: 992px) {.logo{  right:3%;top:80%;}}
+@media (max-width: 900px) {.logo{  left:5%;top:50%;
+width:50px;
+height:50px;
+background-size: 50px 50px;
+border: 2px solid #696969;
+}
+.logo img{width:50px !important;height:50px !important;}
+}
 
-.logo:hover img {
+.logo:hover img, .logo:focus img , .logo:active img{
   opacity: 1;
 }
 .logo img{width: 70px;height:70px;  border-radius: 50%;  transition: opacity .5s linear;
